<resources>
    <string name="app_name">Novigrad</string>
    <string name="update_available_services">Update Available Services</string>
    <string name="add_document">Add document</string>
    <string name="remove_document">Remove Document</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="criminal_record">Criminal Record:</string>
    <string name="necessary">Necessary</string>
    <string name="unnecessary">Unnecessary</string>
    <string name="driver_licence">Driver Licence</string>
    <string name="passport">Passport</string>
    <string name="personal_information">Personal Information</string>
    <string name="proof_of_residence">Proof of residence</string>
    <string name="change_opening_hours">Change opening hours</string>
    <string name="sunday">Sunday :</string>
    <string name="monday">Monday :</string>
    <string name="tuesday">Tuesday :</string>
    <string name="wednesday">Wednesday :</string>
    <string name="thursday">Thursday :</string>
    <string name="friday">Friday :</string>
    <string name="saturday">Saturday :</string>
    <string name="sunday_hours">Sunday hours</string>
    <string name="monday_hours">Monday hours</string>
    <string name="tuesday_hours">Tuesday hours</string>
    <string name="wednesday_hours">Wednesday hours</string>
    <string name="thursday_hours">Thursday hours</string>
    <string name="friday_hours">Friday hours</string>
    <string name="saturday_hours">Saturday Hours</string>
    <string name="save_changes">Save changes</string>
    <string name="select_service">Select Service</string>
    <string name="select_the_wanted_service_and_press_the_continue_button">Select the wanted service and press the next button.</string>
    <string name="Next">Next</string>
</resources>