<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectService">

    <LinearLayout
        android:id="@+id/selectServiceMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/txtSelectServiceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_service"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="34sp" />

        <Space
            android:id="@+id/selectServiceSpace1"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txtSelectServiceInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_the_wanted_service_and_press_the_continue_button" />

        <Spinner
            android:id="@+id/selectServiceSpinner"
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <Button
            android:id="@+id/selectServiceBtnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnClick"
            android:text="@string/Next" />

        <Button
            android:id="@+id/selectServiceBtnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnClick"
            android:text="@android:string/cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>