<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SetBranchHours">

    <LinearLayout
        android:id="@+id/vllBranchLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtBranchHoursTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_opening_hours"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Monday : " />

            <CheckBox
                android:id="@+id/mondayOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open" />

            <TextView
                android:id="@+id/mondayStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/mondayClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Close" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tuesday : " />

            <CheckBox
                android:id="@+id/tuesdayOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open" />

            <TextView
                android:id="@+id/tuesdayStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/tuesdayClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Close" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Wednesday : " />

            <CheckBox
                android:id="@+id/wednesdayOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open" />

            <TextView
                android:id="@+id/wednesdayStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/wednesdayClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Close" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Thursday : " />

            <CheckBox
                android:id="@+id/thursdayOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open" />

            <TextView
                android:id="@+id/thursdayStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/thursdayClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Close" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Friday : " />

            <CheckBox
                android:id="@+id/fridayOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open" />

            <TextView
                android:id="@+id/fridayStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/fridayClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Close" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Saturday : " />

            <CheckBox
                android:id="@+id/saturdayOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open" />

            <TextView
                android:id="@+id/saturdayStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/saturdayClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Close" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sunday : " />

            <CheckBox
                android:id="@+id/sundayOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open" />

            <TextView
                android:id="@+id/sundayStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/sundayClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Close" />

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btnBranchHoursSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnClick"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/btnBranchHoursReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnClick"
            android:text="@string/return_to_main_menu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>